--- a/OutlookTfsConnector/Properties/Resources.resx
+++ b/OutlookTfsConnector/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="btn_donateCC_LG[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btn_donateCC_LG[1].gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TfsImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TfsImage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
